# sox_implementation

./: .gitignore  README.md  package-lock.json  package.json  pnpm-lock.yaml
hardhat/: deploy_libraries.ts  hardhat.config.ts  package-lock.json  package.json
hardhat/contracts/: CommitmentSOX.sol  EvaluatorSOX.sol  MockCommitmentVerifier.sol  MockOptimisticSOX.sol  OptimisticSOX.sol
hardhat/test/: CommitmentSOX.ts  OptimisticSOX.ts  deployers.ts
hardhat/test/gas/: DisputeGrowth.ts  EndToEnd.ts  OnlyDispute.ts  Optimistic.ts  OptimisticWithDisputeTrigger.ts
src/app/: page.tsx
src/app/components/: Button.tsx  ContractInformation.tsx  ContractsListView.tsx  DisputeListView.tsx  FormFileInput.tsx  FormTextField.tsx  Modal.tsx  NewContractModal.tsx  NewDisputeModal.tsx  PendingPrecontractsListView.tsx  SearchContractModal.tsx  SponsorContractsListView.tsx  SponsorModal.tsx  UserContractsListView.tsx
src/app/db/: init.sql  sample_data.sql  sox.sqlite
src/app/lib/: accumulator.ts  aes-ctr.ts  commitment.ts  encryption.ts  helpers.ts  sha256.ts  sqlite.ts
src/app/new_contract/: page.tsx
src/app/new_dispute/: page.tsx
src/app/user/: page.tsx
src/hardhat/: deploy_libraries.ts  hardhat.config.ts  package-lock.json
src/hardhat/contracts/: AES128CtrEvaluator.sol  AES128CtrTest.sol  AccumulatorSOX.sol  CommitmentSOX.sol  DisputeDeployer.sol  DisputeSOX.sol  EvaluatorSOX.sol  MockDisputeDeployer.sol  (+3 more)
src/wasm/: Cargo.toml
src/wasm/src/: accumulator.rs  aes_ctr.rs  circuits.rs  commitment.rs  encryption.rs  lib.rs  sha256.rs  simple_operations.rs  utils.rs
(+77 files in other folders)
