[package]
name = "circuits"
version = "0.1.0"
edition = "2021"

[dependencies]
sha2-compress = "0.7.2"
wasm-bindgen = "0.2"
aes = "0.8.4"
ctr = "0.9.2"
rand = "0.9.1"
sha3 = "0.10.8"
js-sys = "0.3.77"
rayon = "1.10.0"
prefix-hex = "0.7.1"
serde = { version = "1.0.219", features = ["derive"] }
rmp-serde = "1.0"
sha2 = "0.10.9"
ethabi = "18.0.0"

# 2 versions of getrandom because ethabi uses an outdated version ugh
getrandom = { version = "0.3.3", features = ["wasm_js"] }
getrandom_ethabi = { package = "getrandom", version = "0.2", features = ["js"] }



[lib]
crate-type = ["cdylib"]
